syntax = "proto3";

package protorepo;

option go_package = ".;pb";

import "google/protobuf/Empty.proto";

message Discount {
  double pct = 1;
  int64 value_in_cents = 2;
}

message Product {
  string id = 1;
  int64 price_in_cents = 2;
  string title = 3;
  string description = 4;
  Discount discount = 5;
}

message RequestProduct {
  string id = 1;
}

service ProductService {
  rpc GetByID(RequestProduct) returns (Product) {};
  rpc List(google.protobuf.Empty) returns (stream Product) {};
}